PA2/y.output
Nonterminals useless in grammar

   function_definition
   function_prototype
   function_prototype_header
   parameter_declaration_list
   paramater_declaraion
   compound_statement_with_scope
   statement_list
   statement
   simple_statement
   expression_statement
   selection_statement
   iteration_statement
   while_statement
   for_statement
   condition
   return_statement
   decl_statement
   break_statement


Terminals unused in grammar

   T_While
   T_For
   T_If
   T_Else
   T_Return
   T_Break
   T_Continue
   T_LeftBracket
   T_RightBracket
   T_LeftBrace
   T_RightBrace
   T_Public
   T_Private
   T_Static
   T_Class
   LOWEST
   LOWER_THAN_ELSE


Rules useless in grammar

   58 function_definition: function_prototype compound_statement_with_scope
   59                    | function_prototype T_Semicolon

   60 function_prototype: function_prototype_header T_RightParen

   61 function_prototype_header: type_specifier T_Identifier T_LeftParen
   62                          | type_specifier T_Identifier T_LeftParen parameter_declaration_list

   63 parameter_declaration_list: parameter_declaration_list T_Comma paramater_declaraion
   64                           | paramater_declaraion

   65 paramater_declaraion: type_specifier T_Identifier

   66 compound_statement_with_scope: T_LeftBrace statement_list T_RightBrace
   67                              | T_LeftBrace T_RightBrace

   68 statement_list: statement_list statement
   69               | statement

   70 statement: compound_statement_with_scope
   71          | simple_statement
   72          | iteration_statement
   73          | return_statement
   74          | decl_statement
   75          | break_statement

   76 simple_statement: expression_statement
   77                 | selection_statement

   78 expression_statement: T_Semicolon
   79                     | expression T_Semicolon

   80 selection_statement: T_If T_LeftParen expression T_RightParen compound_statement_with_scope
   81                    | T_If T_LeftParen expression T_RightParen compound_statement_with_scope T_Else compound_statement_with_scope

   82 iteration_statement: while_statement
   83                    | for_statement

   84 while_statement: T_While T_LeftParen condition T_RightParen statement

   85 for_statement: T_For T_LeftParen expression_statement expression_statement expression T_RightParen statement

   86 condition: expression

   87 return_statement: T_Return expression_statement

   88 decl_statement: single_declaration

   89 break_statement: T_Break T_Semicolon


State 83 conflicts: 12 shift/reduce


Grammar

    0 $accept: Program $end

    1 Program: DeclList

    2 DeclList: DeclList Decl
    3         | Decl

    4 Decl: single_declaration

    5 single_declaration: type_specifier T_Identifier T_Semicolon
    6                   | type_specifier T_Identifier assignment_operator expression T_Semicolon

    7 type_specifier: T_Void
    8               | T_Int
    9               | T_Bool

   10 expression: assignment_expression
   11           | arithmetic_expression
   12           | relational_expression
   13           | equality_expression
   14           | logical_expression
   15           | unary_expression

   16 assignment_expression: unary_expression assignment_operator expression

   17 assignment_operator: T_Equal
   18                    | T_MulAssign
   19                    | T_DivAssign
   20                    | T_AddAssign
   21                    | T_SubAssign

   22 arithmetic_expression: expression T_Plus expression
   23                      | expression T_Dash expression
   24                      | expression T_Star expression
   25                      | expression T_Slash expression

   26 relational_expression: expression T_LeftAngle expression
   27                      | expression T_RightAngle expression
   28                      | expression T_LessEqual expression
   29                      | expression T_GreaterEqual expression

   30 equality_expression: expression T_EQ expression
   31                    | expression T_NE expression

   32 logical_expression: expression T_And expression
   33                   | expression T_Or expression

   34 postfix_expression: primary_expression
   35                   | postfix_expression T_Inc
   36                   | postfix_expression T_Dec
   37                   | func_call_expression

   38 func_call_expression: function_call_header_with_parameters T_RightParen
   39                     | function_call_header_no_parameters T_RightParen

   40 function_call_header_no_parameters: function_identfier T_LeftParen T_Void
   41                                   | function_identfier T_LeftParen

   42 function_call_header_with_parameters: function_identfier T_LeftParen arg_list

   43 arg_list: assignment_expression
   44         | arg_list T_Comma assignment_expression
   45         | primary_expression
   46         | arg_list T_Comma primary_expression

   47 function_identfier: T_Identifier

   48 primary_expression: T_Identifier
   49                   | constant
   50                   | T_LeftParen expression T_RightParen

   51 unary_expression: postfix_expression
   52                 | T_Inc unary_expression
   53                 | T_Dec unary_expression
   54                 | T_Plus unary_expression
   55                 | T_Dash unary_expression

   56 constant: T_IntConstant
   57         | T_BoolConstant


Terminals, with rules where they appear

$end (0) 0
error (256)
T_Void (258) 7 40
T_Bool (259) 9
T_Int (260) 8
T_LessEqual (261) 28
T_GreaterEqual (262) 29
T_EQ (263) 30
T_NE (264) 31
T_LeftAngle (265) 26
T_RightAngle (266) 27
T_And (267) 32
T_Or (268) 33
T_Equal (269) 17
T_MulAssign (270) 18
T_DivAssign (271) 19
T_AddAssign (272) 20
T_SubAssign (273) 21
T_While (274)
T_For (275)
T_If (276)
T_Else (277)
T_Return (278)
T_Break (279)
T_Continue (280)
T_Inc (281) 35 52
T_Dec (282) 36 53
T_Semicolon (283) 5 6
T_Comma (284) 44 46
T_Dash (285) 23 55
T_Plus (286) 22 54
T_Star (287) 24
T_Slash (288) 25
T_LeftParen (289) 40 41 42 50
T_RightParen (290) 38 39 50
T_LeftBracket (291)
T_RightBracket (292)
T_LeftBrace (293)
T_RightBrace (294)
T_Public (295)
T_Private (296)
T_Static (297)
T_Class (298)
T_Identifier (299) 5 6 47 48
T_IntConstant (300) 56
T_BoolConstant (301) 57
LOWEST (302)
LOWER_THAN_ELSE (303)


Nonterminals, with rules where they appear

$accept (49)
    on left: 0
Program (50)
    on left: 1, on right: 0
DeclList (51)
    on left: 2 3, on right: 1 2
Decl (52)
    on left: 4, on right: 2 3
single_declaration (53)
    on left: 5 6, on right: 4
type_specifier (54)
    on left: 7 8 9, on right: 5 6
expression (55)
    on left: 10 11 12 13 14 15, on right: 6 16 22 23 24 25 26 27 28
    29 30 31 32 33 50
assignment_expression (56)
    on left: 16, on right: 10 43 44
assignment_operator (57)
    on left: 17 18 19 20 21, on right: 6 16
arithmetic_expression (58)
    on left: 22 23 24 25, on right: 11
relational_expression (59)
    on left: 26 27 28 29, on right: 12
equality_expression (60)
    on left: 30 31, on right: 13
logical_expression (61)
    on left: 32 33, on right: 14
postfix_expression (62)
    on left: 34 35 36 37, on right: 35 36 51
func_call_expression (63)
    on left: 38 39, on right: 37
function_call_header_no_parameters (64)
    on left: 40 41, on right: 39
function_call_header_with_parameters (65)
    on left: 42, on right: 38
arg_list (66)
    on left: 43 44 45 46, on right: 42 44 46
function_identfier (67)
    on left: 47, on right: 40 41 42
primary_expression (68)
    on left: 48 49 50, on right: 34 45 46
unary_expression (69)
    on left: 51 52 53 54 55, on right: 15 16 52 53 54 55
constant (70)
    on left: 56 57, on right: 49


State 0

    0 $accept: . Program $end

    T_Void  shift, and go to state 1
    T_Bool  shift, and go to state 2
    T_Int   shift, and go to state 3

    Program             go to state 4
    DeclList            go to state 5
    Decl                go to state 6
    single_declaration  go to state 7
    type_specifier      go to state 8


State 1

    7 type_specifier: T_Void .

    $default  reduce using rule 7 (type_specifier)


State 2

    9 type_specifier: T_Bool .

    $default  reduce using rule 9 (type_specifier)


State 3

    8 type_specifier: T_Int .

    $default  reduce using rule 8 (type_specifier)


State 4

    0 $accept: Program . $end

    $end  shift, and go to state 9


State 5

    1 Program: DeclList .
    2 DeclList: DeclList . Decl

    T_Void  shift, and go to state 1
    T_Bool  shift, and go to state 2
    T_Int   shift, and go to state 3

    $default  reduce using rule 1 (Program)

    Decl                go to state 10
    single_declaration  go to state 7
    type_specifier      go to state 8


State 6

    3 DeclList: Decl .

    $default  reduce using rule 3 (DeclList)


State 7

    4 Decl: single_declaration .

    $default  reduce using rule 4 (Decl)


State 8

    5 single_declaration: type_specifier . T_Identifier T_Semicolon
    6                   | type_specifier . T_Identifier assignment_operator expression T_Semicolon

    T_Identifier  shift, and go to state 11


State 9

    0 $accept: Program $end .

    $default  accept


State 10

    2 DeclList: DeclList Decl .

    $default  reduce using rule 2 (DeclList)


State 11

    5 single_declaration: type_specifier T_Identifier . T_Semicolon
    6                   | type_specifier T_Identifier . assignment_operator expression T_Semicolon

    T_Equal      shift, and go to state 12
    T_MulAssign  shift, and go to state 13
    T_DivAssign  shift, and go to state 14
    T_AddAssign  shift, and go to state 15
    T_SubAssign  shift, and go to state 16
    T_Semicolon  shift, and go to state 17

    assignment_operator  go to state 18


State 12

   17 assignment_operator: T_Equal .

    $default  reduce using rule 17 (assignment_operator)


State 13

   18 assignment_operator: T_MulAssign .

    $default  reduce using rule 18 (assignment_operator)


State 14

   19 assignment_operator: T_DivAssign .

    $default  reduce using rule 19 (assignment_operator)


State 15

   20 assignment_operator: T_AddAssign .

    $default  reduce using rule 20 (assignment_operator)


State 16

   21 assignment_operator: T_SubAssign .

    $default  reduce using rule 21 (assignment_operator)


State 17

    5 single_declaration: type_specifier T_Identifier T_Semicolon .

    $default  reduce using rule 5 (single_declaration)


State 18

    6 single_declaration: type_specifier T_Identifier assignment_operator . expression T_Semicolon

    T_Inc           shift, and go to state 19
    T_Dec           shift, and go to state 20
    T_Dash          shift, and go to state 21
    T_Plus          shift, and go to state 22
    T_LeftParen     shift, and go to state 23
    T_Identifier    shift, and go to state 24
    T_IntConstant   shift, and go to state 25
    T_BoolConstant  shift, and go to state 26

    expression                            go to state 27
    assignment_expression                 go to state 28
    arithmetic_expression                 go to state 29
    relational_expression                 go to state 30
    equality_expression                   go to state 31
    logical_expression                    go to state 32
    postfix_expression                    go to state 33
    func_call_expression                  go to state 34
    function_call_header_no_parameters    go to state 35
    function_call_header_with_parameters  go to state 36
    function_identfier                    go to state 37
    primary_expression                    go to state 38
    unary_expression                      go to state 39
    constant                              go to state 40


State 19

   52 unary_expression: T_Inc . unary_expression

    T_Inc           shift, and go to state 19
    T_Dec           shift, and go to state 20
    T_Dash          shift, and go to state 21
    T_Plus          shift, and go to state 22
    T_LeftParen     shift, and go to state 23
    T_Identifier    shift, and go to state 24
    T_IntConstant   shift, and go to state 25
    T_BoolConstant  shift, and go to state 26

    postfix_expression                    go to state 33
    func_call_expression                  go to state 34
    function_call_header_no_parameters    go to state 35
    function_call_header_with_parameters  go to state 36
    function_identfier                    go to state 37
    primary_expression                    go to state 38
    unary_expression                      go to state 41
    constant                              go to state 40


State 20

   53 unary_expression: T_Dec . unary_expression

    T_Inc           shift, and go to state 19
    T_Dec           shift, and go to state 20
    T_Dash          shift, and go to state 21
    T_Plus          shift, and go to state 22
    T_LeftParen     shift, and go to state 23
    T_Identifier    shift, and go to state 24
    T_IntConstant   shift, and go to state 25
    T_BoolConstant  shift, and go to state 26

    postfix_expression                    go to state 33
    func_call_expression                  go to state 34
    function_call_header_no_parameters    go to state 35
    function_call_header_with_parameters  go to state 36
    function_identfier                    go to state 37
    primary_expression                    go to state 38
    unary_expression                      go to state 42
    constant                              go to state 40


State 21

   55 unary_expression: T_Dash . unary_expression

    T_Inc           shift, and go to state 19
    T_Dec           shift, and go to state 20
    T_Dash          shift, and go to state 21
    T_Plus          shift, and go to state 22
    T_LeftParen     shift, and go to state 23
    T_Identifier    shift, and go to state 24
    T_IntConstant   shift, and go to state 25
    T_BoolConstant  shift, and go to state 26

    postfix_expression                    go to state 33
    func_call_expression                  go to state 34
    function_call_header_no_parameters    go to state 35
    function_call_header_with_parameters  go to state 36
    function_identfier                    go to state 37
    primary_expression                    go to state 38
    unary_expression                      go to state 43
    constant                              go to state 40


State 22

   54 unary_expression: T_Plus . unary_expression

    T_Inc           shift, and go to state 19
    T_Dec           shift, and go to state 20
    T_Dash          shift, and go to state 21
    T_Plus          shift, and go to state 22
    T_LeftParen     shift, and go to state 23
    T_Identifier    shift, and go to state 24
    T_IntConstant   shift, and go to state 25
    T_BoolConstant  shift, and go to state 26

    postfix_expression                    go to state 33
    func_call_expression                  go to state 34
    function_call_header_no_parameters    go to state 35
    function_call_header_with_parameters  go to state 36
    function_identfier                    go to state 37
    primary_expression                    go to state 38
    unary_expression                      go to state 44
    constant                              go to state 40


State 23

   50 primary_expression: T_LeftParen . expression T_RightParen

    T_Inc           shift, and go to state 19
    T_Dec           shift, and go to state 20
    T_Dash          shift, and go to state 21
    T_Plus          shift, and go to state 22
    T_LeftParen     shift, and go to state 23
    T_Identifier    shift, and go to state 24
    T_IntConstant   shift, and go to state 25
    T_BoolConstant  shift, and go to state 26

    expression                            go to state 45
    assignment_expression                 go to state 28
    arithmetic_expression                 go to state 29
    relational_expression                 go to state 30
    equality_expression                   go to state 31
    logical_expression                    go to state 32
    postfix_expression                    go to state 33
    func_call_expression                  go to state 34
    function_call_header_no_parameters    go to state 35
    function_call_header_with_parameters  go to state 36
    function_identfier                    go to state 37
    primary_expression                    go to state 38
    unary_expression                      go to state 39
    constant                              go to state 40


State 24

   47 function_identfier: T_Identifier .
   48 primary_expression: T_Identifier .

    T_LeftParen  reduce using rule 47 (function_identfier)
    $default     reduce using rule 48 (primary_expression)


State 25

   56 constant: T_IntConstant .

    $default  reduce using rule 56 (constant)


State 26

   57 constant: T_BoolConstant .

    $default  reduce using rule 57 (constant)


State 27

    6 single_declaration: type_specifier T_Identifier assignment_operator expression . T_Semicolon
   22 arithmetic_expression: expression . T_Plus expression
   23                      | expression . T_Dash expression
   24                      | expression . T_Star expression
   25                      | expression . T_Slash expression
   26 relational_expression: expression . T_LeftAngle expression
   27                      | expression . T_RightAngle expression
   28                      | expression . T_LessEqual expression
   29                      | expression . T_GreaterEqual expression
   30 equality_expression: expression . T_EQ expression
   31                    | expression . T_NE expression
   32 logical_expression: expression . T_And expression
   33                   | expression . T_Or expression

    T_LessEqual     shift, and go to state 46
    T_GreaterEqual  shift, and go to state 47
    T_EQ            shift, and go to state 48
    T_NE            shift, and go to state 49
    T_LeftAngle     shift, and go to state 50
    T_RightAngle    shift, and go to state 51
    T_And           shift, and go to state 52
    T_Or            shift, and go to state 53
    T_Semicolon     shift, and go to state 54
    T_Dash          shift, and go to state 55
    T_Plus          shift, and go to state 56
    T_Star          shift, and go to state 57
    T_Slash         shift, and go to state 58


State 28

   10 expression: assignment_expression .

    $default  reduce using rule 10 (expression)


State 29

   11 expression: arithmetic_expression .

    $default  reduce using rule 11 (expression)


State 30

   12 expression: relational_expression .

    $default  reduce using rule 12 (expression)


State 31

   13 expression: equality_expression .

    $default  reduce using rule 13 (expression)


State 32

   14 expression: logical_expression .

    $default  reduce using rule 14 (expression)


State 33

   35 postfix_expression: postfix_expression . T_Inc
   36                   | postfix_expression . T_Dec
   51 unary_expression: postfix_expression .

    T_Inc  shift, and go to state 59
    T_Dec  shift, and go to state 60

    $default  reduce using rule 51 (unary_expression)


State 34

   37 postfix_expression: func_call_expression .

    $default  reduce using rule 37 (postfix_expression)


State 35

   39 func_call_expression: function_call_header_no_parameters . T_RightParen

    T_RightParen  shift, and go to state 61


State 36

   38 func_call_expression: function_call_header_with_parameters . T_RightParen

    T_RightParen  shift, and go to state 62


State 37

   40 function_call_header_no_parameters: function_identfier . T_LeftParen T_Void
   41                                   | function_identfier . T_LeftParen
   42 function_call_header_with_parameters: function_identfier . T_LeftParen arg_list

    T_LeftParen  shift, and go to state 63


State 38

   34 postfix_expression: primary_expression .

    $default  reduce using rule 34 (postfix_expression)


State 39

   15 expression: unary_expression .
   16 assignment_expression: unary_expression . assignment_operator expression

    T_Equal      shift, and go to state 12
    T_MulAssign  shift, and go to state 13
    T_DivAssign  shift, and go to state 14
    T_AddAssign  shift, and go to state 15
    T_SubAssign  shift, and go to state 16

    $default  reduce using rule 15 (expression)

    assignment_operator  go to state 64


State 40

   49 primary_expression: constant .

    $default  reduce using rule 49 (primary_expression)


State 41

   52 unary_expression: T_Inc unary_expression .

    $default  reduce using rule 52 (unary_expression)


State 42

   53 unary_expression: T_Dec unary_expression .

    $default  reduce using rule 53 (unary_expression)


State 43

   55 unary_expression: T_Dash unary_expression .

    $default  reduce using rule 55 (unary_expression)


State 44

   54 unary_expression: T_Plus unary_expression .

    $default  reduce using rule 54 (unary_expression)


State 45

   22 arithmetic_expression: expression . T_Plus expression
   23                      | expression . T_Dash expression
   24                      | expression . T_Star expression
   25                      | expression . T_Slash expression
   26 relational_expression: expression . T_LeftAngle expression
   27                      | expression . T_RightAngle expression
   28                      | expression . T_LessEqual expression
   29                      | expression . T_GreaterEqual expression
   30 equality_expression: expression . T_EQ expression
   31                    | expression . T_NE expression
   32 logical_expression: expression . T_And expression
   33                   | expression . T_Or expression
   50 primary_expression: T_LeftParen expression . T_RightParen

    T_LessEqual     shift, and go to state 46
    T_GreaterEqual  shift, and go to state 47
    T_EQ            shift, and go to state 48
    T_NE            shift, and go to state 49
    T_LeftAngle     shift, and go to state 50
    T_RightAngle    shift, and go to state 51
    T_And           shift, and go to state 52
    T_Or            shift, and go to state 53
    T_Dash          shift, and go to state 55
    T_Plus          shift, and go to state 56
    T_Star          shift, and go to state 57
    T_Slash         shift, and go to state 58
    T_RightParen    shift, and go to state 65


State 46

   28 relational_expression: expression T_LessEqual . expression

    T_Inc           shift, and go to state 19
    T_Dec           shift, and go to state 20
    T_Dash          shift, and go to state 21
    T_Plus          shift, and go to state 22
    T_LeftParen     shift, and go to state 23
    T_Identifier    shift, and go to state 24
    T_IntConstant   shift, and go to state 25
    T_BoolConstant  shift, and go to state 26

    expression                            go to state 66
    assignment_expression                 go to state 28
    arithmetic_expression                 go to state 29
    relational_expression                 go to state 30
    equality_expression                   go to state 31
    logical_expression                    go to state 32
    postfix_expression                    go to state 33
    func_call_expression                  go to state 34
    function_call_header_no_parameters    go to state 35
    function_call_header_with_parameters  go to state 36
    function_identfier                    go to state 37
    primary_expression                    go to state 38
    unary_expression                      go to state 39
    constant                              go to state 40


State 47

   29 relational_expression: expression T_GreaterEqual . expression

    T_Inc           shift, and go to state 19
    T_Dec           shift, and go to state 20
    T_Dash          shift, and go to state 21
    T_Plus          shift, and go to state 22
    T_LeftParen     shift, and go to state 23
    T_Identifier    shift, and go to state 24
    T_IntConstant   shift, and go to state 25
    T_BoolConstant  shift, and go to state 26

    expression                            go to state 67
    assignment_expression                 go to state 28
    arithmetic_expression                 go to state 29
    relational_expression                 go to state 30
    equality_expression                   go to state 31
    logical_expression                    go to state 32
    postfix_expression                    go to state 33
    func_call_expression                  go to state 34
    function_call_header_no_parameters    go to state 35
    function_call_header_with_parameters  go to state 36
    function_identfier                    go to state 37
    primary_expression                    go to state 38
    unary_expression                      go to state 39
    constant                              go to state 40


State 48

   30 equality_expression: expression T_EQ . expression

    T_Inc           shift, and go to state 19
    T_Dec           shift, and go to state 20
    T_Dash          shift, and go to state 21
    T_Plus          shift, and go to state 22
    T_LeftParen     shift, and go to state 23
    T_Identifier    shift, and go to state 24
    T_IntConstant   shift, and go to state 25
    T_BoolConstant  shift, and go to state 26

    expression                            go to state 68
    assignment_expression                 go to state 28
    arithmetic_expression                 go to state 29
    relational_expression                 go to state 30
    equality_expression                   go to state 31
    logical_expression                    go to state 32
    postfix_expression                    go to state 33
    func_call_expression                  go to state 34
    function_call_header_no_parameters    go to state 35
    function_call_header_with_parameters  go to state 36
    function_identfier                    go to state 37
    primary_expression                    go to state 38
    unary_expression                      go to state 39
    constant                              go to state 40


State 49

   31 equality_expression: expression T_NE . expression

    T_Inc           shift, and go to state 19
    T_Dec           shift, and go to state 20
    T_Dash          shift, and go to state 21
    T_Plus          shift, and go to state 22
    T_LeftParen     shift, and go to state 23
    T_Identifier    shift, and go to state 24
    T_IntConstant   shift, and go to state 25
    T_BoolConstant  shift, and go to state 26

    expression                            go to state 69
    assignment_expression                 go to state 28
    arithmetic_expression                 go to state 29
    relational_expression                 go to state 30
    equality_expression                   go to state 31
    logical_expression                    go to state 32
    postfix_expression                    go to state 33
    func_call_expression                  go to state 34
    function_call_header_no_parameters    go to state 35
    function_call_header_with_parameters  go to state 36
    function_identfier                    go to state 37
    primary_expression                    go to state 38
    unary_expression                      go to state 39
    constant                              go to state 40


State 50

   26 relational_expression: expression T_LeftAngle . expression

    T_Inc           shift, and go to state 19
    T_Dec           shift, and go to state 20
    T_Dash          shift, and go to state 21
    T_Plus          shift, and go to state 22
    T_LeftParen     shift, and go to state 23
    T_Identifier    shift, and go to state 24
    T_IntConstant   shift, and go to state 25
    T_BoolConstant  shift, and go to state 26

    expression                            go to state 70
    assignment_expression                 go to state 28
    arithmetic_expression                 go to state 29
    relational_expression                 go to state 30
    equality_expression                   go to state 31
    logical_expression                    go to state 32
    postfix_expression                    go to state 33
    func_call_expression                  go to state 34
    function_call_header_no_parameters    go to state 35
    function_call_header_with_parameters  go to state 36
    function_identfier                    go to state 37
    primary_expression                    go to state 38
    unary_expression                      go to state 39
    constant                              go to state 40


State 51

   27 relational_expression: expression T_RightAngle . expression

    T_Inc           shift, and go to state 19
    T_Dec           shift, and go to state 20
    T_Dash          shift, and go to state 21
    T_Plus          shift, and go to state 22
    T_LeftParen     shift, and go to state 23
    T_Identifier    shift, and go to state 24
    T_IntConstant   shift, and go to state 25
    T_BoolConstant  shift, and go to state 26

    expression                            go to state 71
    assignment_expression                 go to state 28
    arithmetic_expression                 go to state 29
    relational_expression                 go to state 30
    equality_expression                   go to state 31
    logical_expression                    go to state 32
    postfix_expression                    go to state 33
    func_call_expression                  go to state 34
    function_call_header_no_parameters    go to state 35
    function_call_header_with_parameters  go to state 36
    function_identfier                    go to state 37
    primary_expression                    go to state 38
    unary_expression                      go to state 39
    constant                              go to state 40


State 52

   32 logical_expression: expression T_And . expression

    T_Inc           shift, and go to state 19
    T_Dec           shift, and go to state 20
    T_Dash          shift, and go to state 21
    T_Plus          shift, and go to state 22
    T_LeftParen     shift, and go to state 23
    T_Identifier    shift, and go to state 24
    T_IntConstant   shift, and go to state 25
    T_BoolConstant  shift, and go to state 26

    expression                            go to state 72
    assignment_expression                 go to state 28
    arithmetic_expression                 go to state 29
    relational_expression                 go to state 30
    equality_expression                   go to state 31
    logical_expression                    go to state 32
    postfix_expression                    go to state 33
    func_call_expression                  go to state 34
    function_call_header_no_parameters    go to state 35
    function_call_header_with_parameters  go to state 36
    function_identfier                    go to state 37
    primary_expression                    go to state 38
    unary_expression                      go to state 39
    constant                              go to state 40


State 53

   33 logical_expression: expression T_Or . expression

    T_Inc           shift, and go to state 19
    T_Dec           shift, and go to state 20
    T_Dash          shift, and go to state 21
    T_Plus          shift, and go to state 22
    T_LeftParen     shift, and go to state 23
    T_Identifier    shift, and go to state 24
    T_IntConstant   shift, and go to state 25
    T_BoolConstant  shift, and go to state 26

    expression                            go to state 73
    assignment_expression                 go to state 28
    arithmetic_expression                 go to state 29
    relational_expression                 go to state 30
    equality_expression                   go to state 31
    logical_expression                    go to state 32
    postfix_expression                    go to state 33
    func_call_expression                  go to state 34
    function_call_header_no_parameters    go to state 35
    function_call_header_with_parameters  go to state 36
    function_identfier                    go to state 37
    primary_expression                    go to state 38
    unary_expression                      go to state 39
    constant                              go to state 40


State 54

    6 single_declaration: type_specifier T_Identifier assignment_operator expression T_Semicolon .

    $default  reduce using rule 6 (single_declaration)


State 55

   23 arithmetic_expression: expression T_Dash . expression
